# rustic_llama

./: .gitignore  Cargo.toml  README.md
src/: generator.rs  lib.rs  main.rs  ops.rs  sampler.rs  tokenizer.rs  transformer.rs  utils.rs
src/llama2/: config.rs  mod.rs  run_state.rs  transformer.rs  weights.rs
