[package]
name = "rustic_llama"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
bytemuck = "1.14.3"
clap = { version = "4.5.3", features = ["derive"] }
datasize = "0.2.15"
humansize = "2.1.3"
memmap2 = "0.9.4"
num-traits = "0.2.18"
rand = "0.8.5"
regex = "1.10.3"

[profile.release]
debug = true
